Add GitHub button and background

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <div class="navigation">
         <a onclick="aboutme()">About me</a>
         <a onclick="projects()">Projects</a>
+        <a href="https://github.com/BorysDev">GitHub</a>
     </div>
 
     <div id="containers"></div>
+
+    <h1 class='content credit'>Image courtesy of <a href="https://www.pexels.com/photo/clouds-cold-frost-frosty-540518/" target="_blank">Pexels.com</a></h1>
 </body>
 
 <script src="./main.js"></script>
