Remove image, and replace credit with a footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="containers"></div>
 
-    <h1 class='content credit'>Image courtesy of <a href="https://www.pexels.com/photo/clouds-cold-frost-frosty-540518/" target="_blank">Pexels.com</a></h1>
+    <h1 class='content bottom-text'>Website created by <a href="https://github.com/BorysDev" target="_blank">Borys</a></h1>
 </body>
 
 <script src="./main.js"></script>
